[package]
name = "weather-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI
ratatui = "0.25.0"
crossterm = "0.27"

# Async + HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# JSON / types
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }